# G2O_LogicalKeys

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/Hacks/include/: untyped.h
dependencies/Union/: CMakeLists.txt  UnionAfx.h
dependencies/Union/Union/: CUntyped.h  Types.h
dependencies/Union/ZenGin/: zGothicAPI.h
dependencies/Union/ZenGin/Gothic_II_Addon/: ClassDeclarators_G2A.cpp  Globals_G2A.cpp  Statics_G2A.cpp  VFTable_G2A.h
dependencies/Union/ZenGin/Gothic_II_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+167 more)
dependencies/Union/ZenGin/Gothic_II_Classic/: ClassDeclarators_G2.cpp  Globals_G2.cpp  Statics_G2.cpp  VFTable_G2.h
dependencies/Union/ZenGin/Gothic_II_Classic/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+166 more)
dependencies/Union/ZenGin/Gothic_I_Addon/: ClassDeclarators_G1A.cpp  Globals_G1A.cpp  Statics_G1A.cpp  VFTable_G1A.h
dependencies/Union/ZenGin/Gothic_I_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+164 more)
dependencies/Union/ZenGin/Gothic_I_Classic/: ClassDeclarators_G1.cpp  Globals_G1.cpp  Statics_G1.cpp  VFTable_G1.h
dependencies/Union/ZenGin/Gothic_I_Classic/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDoc.h  (+197 more)
(+13 files in other folders)
